--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.2",
+    "mongoose": "^4.13.7",
     "nodemon": "^1.14.3",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0"
