--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,10 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "8.1.3",
+    "npm": "5.5.1"
+  },
   "proxy": {
     "/auth/google": {
       "target": "http://localhost:5000"
@@ -12,7 +16,8 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
-    "bootstrap": "^4.0.0-alpha.6",
+    "babel-standalone": "^6.26.0",
+    "bootstrap": "^3.3.7",
     "lodash": "^4.17.4",
     "materialize-css": "^0.100.2",
     "react": "^16.2.0",
