--- a/client/package.json
+++ b/client/package.json
@@ -16,11 +16,11 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
-    "babel-standalone": "^6.26.0",
     "bootstrap": "^3.3.7",
     "lodash": "^4.17.4",
     "materialize-css": "^0.100.2",
     "react": "^16.2.0",
+    "react-bootstrap": "^0.32.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
