--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     }
   },
   "dependencies": {
+    "animejs": "^2.2.0",
     "axios": "^0.17.1",
     "bootstrap": "^3.3.7",
     "lodash": "^4.17.4",
@@ -26,6 +27,7 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
     "react-stripe-checkout": "^2.6.3",
+    "react-transition-group": "^2.2.1",
     "redux": "^3.7.2",
     "redux-form": "^7.2.0",
     "redux-thunk": "^2.2.0"
