--- a/client/package.json
+++ b/client/package.json
@@ -18,16 +18,19 @@
     "animejs": "^2.2.0",
     "axios": "^0.17.1",
     "bootstrap": "^3.3.7",
+    "json-loader": "^0.5.7",
     "lodash": "^4.17.4",
     "materialize-css": "^0.100.2",
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.0",
     "react-dom": "^16.2.0",
+    "react-google-maps": "^9.4.5",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
     "react-stripe-checkout": "^2.6.3",
     "react-transition-group": "^2.2.1",
+    "recompose": "^0.26.0",
     "redux": "^3.7.2",
     "redux-form": "^7.2.0",
     "redux-thunk": "^2.2.0"
